[gd_scene load_steps=2 format=3 uid="uid://b3k7x8m9n2qrs"]

[ext_resource type="Script" path="res://scripts/character_creation.gd" id="1_char"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "‚õ≥ CREATE YOUR GOLFER ‚õ≥"
horizontal_alignment = 1

[node name="GolferSprite" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.4, 0.6, 0.3, 1)

[node name="PixelLabel" type="Label" parent="CenterContainer/VBoxContainer/GolferSprite"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "üèåÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsSection" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PowerRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer/StatsSection"]
layout_mode = 2

[node name="PowerLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsSection/PowerRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "üí™ Power:"

[node name="PowerSlider" type="HSlider" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="PowerValue" type="Label" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="AccuracyRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer/StatsSection"]
layout_mode = 2

[node name="AccuracyLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsSection/AccuracyRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "üéØ Accuracy:"

[node name="AccuracySlider" type="HSlider" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="AccuracyValue" type="Label" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="StaminaRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer/StatsSection"]
layout_mode = 2

[node name="StaminaLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsSection/StaminaRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "‚ù§Ô∏è Stamina:"

[node name="StaminaSlider" type="HSlider" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="StaminaValue" type="Label" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="LuckRow" type="HBoxContainer" parent="CenterContainer/VBoxContainer/StatsSection"]
layout_mode = 2

[node name="LuckLabel" type="Label" parent="CenterContainer/VBoxContainer/StatsSection/LuckRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "üçÄ Luck:"

[node name="LuckSlider" type="HSlider" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="LuckValue" type="Label" parent="CenterContainer/VBoxContainer/StatsSection"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="ButtonSection" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonSection"]
layout_mode = 2
text = "Back"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonSection"]
layout_mode = 2
text = "Play Golf!"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonSection/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonSection/StartButton" to="." method="_on_start_button_pressed"]
